[package]
name = "rusthunter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.2"
configparser = "2.1.0"
serde_json = "1.0.59"
json-structural-diff = { version = "0.1.0", features = ['colorize'] }
# json_diff = "0.1.2"
assert-json-diff = "2.0.1"
diffy = "0.2.2"
hostname = "0.1.5"
maplit = "1.0.2"
colored = "1.9.0"
structopt = "0.3.5"
glob = "0.3.0"
chrono = "0.4"
powershell_script = "0.3.2"
regex = "1.5.6"